# Diffusion

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_train.txt
blast_pile_diffusion/data/: caption_generator.py  coco_builder.py  sample_bundle.py  unity_reader.py
blast_pile_diffusion/inference/: batch_processor.py  controlnet_runner.py  pipeline_builder.py  prompt_bank.py
blast_pile_diffusion/lora/: lora_validator.py  prepare_dataset.py  train_launcher.py
blast_pile_diffusion/preprocessing/: canny_from_mask.py  depth_processor.py  normal_processor.py  preprocessor.py
blast_pile_diffusion/qc/: diversity_checker.py  edge_alignment.py  qc_runner.py
blast_pile_diffusion/utils/: depth_utils.py  image_io.py  (+1 more)
configs/: base.yaml
docs/: dataset_delivery_report.md  known_issues.md  qc_analysis.md  task_decomposition.md
notebooks/: 02_depth_normalization_tuning.ipynb  03_canny_threshold_sweep.ipynb  04_inference_param_sweep.ipynb  05_qc_threshold_calibration.ipynb
scripts/: 01_preprocess_unity.py  02_prepare_lora_data.py  03_train_lora.sh  04_run_inference.py  05_run_qc.py  06_build_coco_dataset.py  check_lora_images.py  dataset_statistics.py  draw_architecture.py  setup_environment.sh  smoke_test.py  train_lora_diffusers.py  verify_models.py
tests/: test_batch_processor.py  test_canny_from_mask.py  test_caption_generator.py  test_coco_builder.py  test_dataset_statistics.py  test_depth_processor.py  test_edge_alignment_qc.py  test_inference_config.py  test_lora_data.py  test_normal_processor.py  test_qc_runner.py  test_unity_reader.py
(+5 files in other folders)
